# dmezo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
configs/: centralized_qwen3_5_4b_base_sst2_2000.yaml  dmezo_2c_complete_qwen3_4b_sst2.yaml  dmezo_4c_complete_dir05_qwen3_5_4b_base_sst2.yaml  dmezo_4c_complete_iid_qwen3_4b_hellaswag_nest_decay.yaml  dmezo_4c_complete_iid_qwen3_4b_hellaswag_nest_decay_k3.yaml  dmezo_4c_complete_iid_qwen3_4b_mathlogicqa_nest_decay.yaml  dmezo_4c_complete_iid_qwen3_5_4b_base_hellaswag_nest_decay.yaml  dmezo_4c_complete_iid_qwen3_5_4b_base_mathlogicqa_nest_decay.yaml  dmezo_4c_complete_iid_qwen3_5_4b_base_sst2.yaml  dmezo_4c_ring_dir05_qwen3_5_4b_base_sst2.yaml  dmezo_4c_ring_dir05_qwen3_5_4b_base_sst2_nest05.yaml  dmezo_4c_ring_dir05_qwen3_5_4b_base_sst2_nest09.yaml  dmezo_4c_ring_dir05_qwen3_5_4b_base_sst2_nest09_clip200.yaml  dmezo_4c_ring_dir05_qwen3_5_4b_base_sst2_nest09_clip50.yaml  dmezo_4c_ring_dir05_qwen3_5_4b_base_sst2_nest09_lookahead.yaml  dmezo_4c_ring_dir05_qwen3_5_4b_base_sst2_nest_decay.yaml  dmezo_4c_ring_dir05_qwen3_5_4b_base_sst2_nest_decay_k3.yaml  dmezo_4c_ring_iid_qwen3_5_4b_base_sst2.yaml  dmezo_4clients_ring.yaml  qwen3_06b_hellaswag_preflight.yaml  qwen3_06b_local_1k.yaml  qwen3_06b_preflight.yaml  qwen3_17b_local_1k.yaml  qwen3_4b_boolq.yaml  qwen3_4b_hellaswag.yaml  qwen3_4b_mathlogicqa.yaml  qwen3_4b_sst2.yaml  qwen3_5_4b_base_boolq.yaml  qwen3_5_4b_base_hellaswag.yaml  qwen3_5_4b_base_mathlogicqa.yaml  qwen3_5_4b_base_sst2.yaml
docs/: 01-project-context.md  02-related-work.md  (+35 more)
(+79 files in other folders)
