[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmezo"
version = "0.0.1"
description = "Decentralized Federated MeZO with Nesterov acceleration"
authors = [{name = "Maksim", email = "rmnfn1992@outlook.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.3.0",
    "transformers>=4.45.0",
    "accelerate>=0.30.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "tqdm>=4.66",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
wandb = ["wandb>=0.16"]
bitsandbytes = ["bitsandbytes>=0.43"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
